--- a/app/kakaochat/assets-layout/css/style.css
+++ b/app/kakaochat/assets-layout/css/style.css
@@ -222,7 +222,7 @@ pre {
 
   .navbar-brand {
     margin-right: 0!important;
-    /* padding-right: 2rem!important; */
+    padding-right: 0.5rem!important;
   }
 
 }
